@@ -1,38 +1,41 @@
 package unq.po2.tpFinal;
 import java.time.LocalDate;
+import java.util.Comparator;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
-public class BookingSystem implements BookingAcceptedObserver {
-		
-	private Set<Booking> unconfirmedBookings;
-	private Set<Booking> confirmedBookings;
+public class BookingSystem implements BookingAcceptedObserver {		
+	
+	private Set<Booking> bookings;	
 	public List<BookingCancelledObserver> bookingCancelledObservers;
 	
-	
 	public BookingSystem(List<BookingCancelledObserver> bookingCancelledObserver) {
-		unconfirmedBookings = new HashSet<Booking>();
-		confirmedBookings = new HashSet<Booking>();
+		
+		bookings = new HashSet<Booking>();
 		this.bookingCancelledObservers = bookingCancelledObserver;
 	}
 
 	@Override
 	public void notifyBookingAccepted(Booking booking) {		
-		confirmedBookings.add(booking);
-		unconfirmedBookings.remove(booking);
+		bookings.add(booking);		
 	}
 	
 	public void cancelBooking(Booking booking) {
-		this.confirmedBookings.remove(booking);
+		this.bookings.remove(booking);
 		this.bookingCancelledObservers.forEach(observer -> observer.notifyBookingCancelled(booking));
 	}
 	
 	public List<Booking> getAllBookings(Tenant tenant){
-		return Stream.concat(this.getUnconfirmedBookings(tenant), this.getConfirmedBookings(tenant))
-			    .collect(Collectors.toList());
+		return bookings.stream()
+				.filter(booking-> booking.getTenant().equals(tenant))
+				.toList();
+	}
+	
+	public List<Booking> getAllBookings(){
+		return bookings.stream().toList();
 	}
 	
 	public List<Booking> getFutureBookings(Tenant tenant){
@@ -54,16 +57,5 @@ public class BookingSystem implements BookingAcceptedObserver {
 				.stream()
 				.map(booking-> booking.getCity())
 				.toList();
-	}
-	
-	private Stream<Booking> getUnconfirmedBookings(Tenant tenant){
-		return unconfirmedBookings.stream()
-				.filter(booking -> booking.getTenant().equals(tenant));
-	}
-	
-	
-	private Stream<Booking> getConfirmedBookings(Tenant tenant){
-		return unconfirmedBookings.stream()
-				.filter(booking -> booking.getTenant().equals(tenant));
-	}
+	}	
 }
